# specfile

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  .prettierignore  .zuul.yaml  CHANGELOG.md  CONTRIBUTING.md  Containerfile.tests  Makefile  README.md  _typos.toml  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: check-release-notes.yml  do-release.yml  prepare-release.yml  pypi-publish.yml  trigger-packit-dev.yml  update-constants.yml
centos-integration-sig/: python-specfile.spec
docs/: index.md
docs/api/: processors.py  specfile.yml
epel/: python-specfile.spec
epel10/: python-specfile.spec
epel8/: python-specfile.spec
fedora/: python-specfile.spec
files/: install-requirements-pip.yaml  install-requirements-rpms.yaml  local-tests-requirements.yaml  zuul-tests.yaml
files/tasks/: build-rpm-deps.yaml  generic-dnf-requirements.yaml  rpm-deps.yaml  rpm-test-deps.yaml
plans/: full.fmf  functional.fmf  git_reference.py  main.fmf  packit-integration.fmf  performance.fmf  smoke.fmf
scripts/: extract.py  update_constants.py
specfile/: __init__.py  changelog.py  conditions.py  constants.py  context_management.py  context_management.pyi  exceptions.py  formatter.py  macro_definitions.py  macro_options.py  macros.py  options.py  prep.py  rpm.py  sanitizer.py  sections.py  sourcelist.py  sources.py  spec_parser.py  specfile.py  tags.py  types.py  utils.py  value_parser.py
tests/: conftest.py  constants.py  full.fmf  functional.fmf  performance.fmf  smoke.fmf
tests/data/spec_autopatch/: patch2.patch  patch3.patch  patch6.patch  test.spec
tests/data/spec_autosetup/: test.spec
tests/data/spec_commented_patches/: patch0.patch  patch1.patch  patch4.patch  patch5.patch  test.spec
tests/data/spec_conditionalized_changelog/: test.spec
tests/data/spec_conditionalized_version/: test-0.1.2.tar.xz  test.spec
tests/data/spec_includes/: description1.inc  description2.inc  macros1.inc  macros2.inc  patches.inc  sources.inc  test.spec
tests/data/spec_macros/: test-v0.1.2~rc2.tar.xz  test.spec  tests-01.tar.xz
tests/data/spec_multiple_sources/: test.7z  test.spec  test.tar.bz2  test.tar.lrz  test.tar.lz  test.tar.xz  test.tar.zst
tests/data/spec_no_trailing_newline/: patch2.patch  test.spec
tests/data/spec_patchlist/: test-0.1.tar.xz  test.spec
tests/data/spec_prerelease/: test-v0.1.2-rc2.tar.xz  test.spec
tests/data/spec_prerelease2/: patch0.patch  test.spec
tests/data/spec_rpmautospec/: test.spec
tests/data/spec_shell_expansions/: test.spec
tests/data/spec_traditional/: test.spec
tests/data/spec_traditional_suse/: patch1.patch  test.changes  test.spec
tests/data/spec_unsafe/: test.spec
tests/functional/: conftest.py  test_parse.py
tests/integration/: conftest.py  test_specfile.py
tests/integration/data/: test.spec
tests/performance/: test_parse.py
tests/test-parsing/: parse.py  run.sh
tests/unit/: test_changelog.py  test_conditions.py  test_formatter.py  test_guess_packager.py  test_macro_definitions.py  test_macro_options.py  test_macros.py  test_options.py  test_prep.py  test_rpm.py  test_sanitizer.py  test_sections.py  test_sourcelist.py  test_sources.py  test_spec_parser.py  test_specfile.py  test_tags.py  test_utils.py  test_value_parser.py
