[build-system]
requires = [
    "setuptools>=45",
    # setuptools_scm added git-archive support in version 7
    "setuptools_scm[toml]>=7",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# we can't use pre-release-based version scheme because it generates versions
# that are sorted higher than the last stable release by RPM
# for example:
#   - pre-release (guess-next-dev):
#       0.20.1.dev1+g0abcdef.d20230921 > 0.20.1
#   - post-release (no-guess-dev):
#       0.20.0.post1.dev1+g0abcdef < 0.20.1
version_scheme = "no-guess-dev"
