[metadata]
name = specfile
description = A library for parsing and manipulating RPM spec files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/packit/specfile
author = Red Hat
author_email = user-cont-team@redhat.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Utilities
keywords =
    packaging
    fedora
    rpm
    spec

[options]
packages = find:
install_requires =
    arrow
    importlib-metadata;python_version<"3.8"
    rpm
    typing-extensions
python_requires = >=3.6
include_package_data = True
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

[options.extras_require]
testing =
    pytest
    flexmock

[options.packages.find]
exclude =
    tests*
