[metadata]
name = specfile
description = A library for parsing and manipulating RPM spec files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/packit/specfile
author = Red Hat
author_email = user-cont-team@redhat.com
license = MIT
license_files =
    LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Utilities
keywords =
    packaging
    fedora
    rpm
    spec

[options]
packages = find:
install_requires =
    rpm-py-installer
    typing-extensions
python_requires = >=3.9
include_package_data = True

[options.extras_require]
testing =
    pytest
    flexmock

[options.packages.find]
exclude =
    tests*

[options.package_data]
* = py.typed
